<resources>
    <string name="app_name">M03 HomeWork</string>
    <string name="wechat">WeChat</string>
    <string name="remove_all_fragments">Remove All Fragments</string>
    <string name="replace">Replace</string>
    <string name="banner_text">招商引资</string>
    <string name="banner_image">Banner Image</string>
    <string name="message">Message</string>
    <string name="contact">Contact</string>
    <string name="discover">Discover</string>
    <string name="me">Me</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chat_fragment_message">This is Chats Fragment</string>
    <string name="send">Send</string>
</resources>
